<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="E_ModeMachine" Id="{94336101-c573-42a0-acc6-1413488aa244}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_ModeMachine :
(
  Automatic := 0,
  Manual,
  Startup,
  Setup,
  Maintenance,
  Disabled
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>